<?xml version="1.0"?>
<package format="3">
  <name>pyside2_gui</name>
  <version>0.0.1</version>
  <description>A GUI for vehicle status monitoring</description>
  <maintainer email="saurabh@futuristicbots.com">vijay</maintainer>
  <license>Apache-2.0</license>
  
  <depend>rclpy</depend>
  <depend>PySide2</depend>
  <depend>paho-mqtt</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

